The herding module is now in charge of herding AI checks
(cherry picked from commit 69f9553d0208f9612958b00b59436f81cbe7c6bb)